--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>My Vue App</title>
 </head>
 <body>
+    <div id="app">
+        <p>Hello {{ name }}!</p>
+        <p><input type="text" v-model="name"></p>
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="./js/main.js"></script>
 
