cssで見た目調整

--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <title>My Vue App</title>
 </head>
 <body>
-    <div id="app">
-        <p>Hello {{ name }}!</p>
-        <p><input type="text" v-model="name"></p>
+    <div id="app" class="container">
+        <!-- <p>Hello {{ name.toUpperCase() }}!</p>
+        <p><input type="text" v-model="name"></p> -->
+        <h1>My Todos</h1>
+        <ul>
+            <li v-for="todo in todos">{{ todo }}</li>
+        </ul>
+        <form>
+            <input type="text">
+            <input type="submit" value="Add">
+        </form>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="./js/main.js"></script>
