--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <p><input type="text" v-model="name"></p> -->
         <h1>My Todos</h1>
         <ul>
-            <li v-for="todo in todos">{{ todo }}</li>
+            <li v-for="(todo, index) in todos">
+                {{ todo.title }}
+                <span @click="deleteItem(index)" class="command">[x]</span>
+            </li>
         </ul>
         <form @submit.prevent="addItem">
             <input type="text" v-model="newItem">
